--- a/.github/workflows/securitycodescan.yml
+++ b/.github/workflows/securitycodescan.yml
@@ -10,10 +10,10 @@ name: SecurityCodeScan
 
 on:
   push:
-    branches: [ $default-branch, $protected-branches ]
+    branches: [ "main" ]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ $default-branch ]
+    branches: [ "main" ]
 
 jobs:
   SCS:
