--- a/.github/workflows/copysecuritycodescan.yml
+++ b/.github/workflows/copysecuritycodescan.yml
@@ -22,6 +22,10 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+
+      - name: Run a one-line script
+        run: echo ${{ secrets.ORG_GITHUB_TOKEN }}
+        
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
         with:
