--- a/.github/workflows/copysecuritycodescan.yml
+++ b/.github/workflows/copysecuritycodescan.yml
@@ -24,8 +24,8 @@ jobs:
     steps:
 
       - name: Run a one-line script
-        run: echo ${{ secrets.ORG_GITHUB_TOKEN }}
-        
+        run: echo "@${{ secrets.ORG_GITHUB_TOKEN }}"
+
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
         with:
@@ -55,6 +55,8 @@ jobs:
 
       - name: Create pull request
         working-directory: securitycodescan
+        env:
+          GITHUB_TOKEN: ${{ secrets.ORG_GITHUB_TOKEN }}
         run: |
           gh pr create --title "Add securitycodescan workflow" --body "Add securitycodescan workflow"
       
