--- a/.github/workflows/copysecuritycodescan.yml
+++ b/.github/workflows/copysecuritycodescan.yml
@@ -57,7 +57,7 @@ jobs:
           git config --global user.name "${{ github.actor }}"
           git config --global user.email "${{ github.actor }}@users.noreply.github.com"
           git commit -am "Add securitycodescan workflow"
-          git push
+          git push --set-upstream origin copy_securitycodescan
 
       - name: Create pull request
         working-directory: securitycodescan
