--- a/.github/workflows/setupsecuritycodescan.yml
+++ b/.github/workflows/setupsecuritycodescan.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Copy Sample Workflow
         run: |
           mkdir -p securitycodescan/.github/workflows
-          cp main/.github/workflows/securitycodescan.yml securitycodescan/.github/workflows/securitycodescan.yml
+          cp main/workflows/securitycodescan.yml securitycodescan/.github/workflows/securitycodescan.yml
 
       - name: Commit and Push
         working-directory: securitycodescan
