--- a/AwsomeRepositories/repos.yml
+++ b/AwsomeRepositories/repos.yml
@@ -19,25 +19,7 @@ metadata:
     - create
     - azd
 spec:
-  inputJsonSchema:
-    type: object
-    required:
-      - name
-      - description
-    properties:
-      name:
-        title: name
-        type: string
-        description: The name of the repository
-      description:
-        title: description
-        type: string
-        description: The description of the repository
-      visibility:
-        title: visibility
-        type: boolean
-        default: true
-        description: The visibility of the repository
+  inputJsonSchema: "{\"type\":\"object\",\"properties\":{\"name\":{\"title\":\"name\",\"description\":\"The name of the repository\"},\"description\":{\"title\":\"description\",\"description\":\"description of the repo\",\"type\":\"string\"},\"visibility\":{\"title\":\"visibility\",\"description\":\"visibility of the repo\",\"type\":\"boolean\", \"default\":true},\"required\":[\"name\", \"description\"]}"
   creates:
     - kind: Repository
       namespace: contoso-inc
